Fixed minor visual issue with word wrapping

--- a/public/index.css
+++ b/public/index.css
@@ -33,3 +33,7 @@ span{
 #command-hidden{
     display:none;
 }
+
+#baseCommand{
+    white-space: nowrap
+}
